Editing ListUtils and ListUtilsTest.